  backup all the registers to conform to the XHDI specification. (VRI)

2010-10-26
- bdos/umem.c: Fixed Malloc() and Mxalloc() to return blocks aligned on
  multiple of 4 bytes. Long alignment improves speed in FastRam. (VRI)

2010-11-02
- bdos/iumem.c, bdos/umem.c: Improved traces on memory management. (VRI)
- bdos/iumem.c, bdos/umem.c, bios/biosmem.c: Really fix Malloc() and others
  for 4-byte alignment. The previous patch was not enough. (VRI)

2010-11-06
- bios/bios.c: Fixed a small memory leak when there is no bootstrap program.
  (VRI)
- bdos/proc.c, bios/bios.c: Fixed a memory leak and a crash when the
  relocation of the bootstrap program fails. (VRI)
- bios/bios.c: Fixed a memory leak when the bootstrap program finishes
  successfully. (VRI)
- tools/mkflop.c: Added a check for the size of ramtos.img when doing
  "make flop". (VRI)
- bios/bios.c: Show the init screen when EmuTOS is loaded from RAM. (VRI)

2010-11-07
- bios/memory.S, bios/screen.c, bios/tosvars.S, vdi/vdi_raster.c:
  Use 0xffffxxxx instead of 0x00ffxxxx to access I/O registers. (VRI)
- aes/gemsuper.c, desk/deskmain.c: Moved desktop traces into the AES,
  since kprintf() is not always available from user mode. (VRI)

2010-11-22
- Makefile: Use full 32-bit addresses, including in disassembly. This is
  necessary when the ROM is located at a nonstandard place. (VRI)
- bios/biosmem.c: Cleaned-up bmem_init() for 32-bit addresses. (VRI)
- bios/kprint.c: Improved dopanic() output. Better support for ColdFire
  stack frames. Each line must be printed with a single kcprintf() to be
  well displayed when the debug traces go to the console. (VRI)

2010-11-29
- desk/desk_rsc.c, desk/desk_rsc.h, desk/desksupp.c: Moved the strings
  FORMAT.PRG and FORMAT.TTP from the resource file to desksupp.c to make
  room. (VRI)

2010-12-26
- bios/conout.c: Fixed console line wrap in high resolutions. (VRI)
- cli/command.c: Fixed crash in EmuCON when typing a command name longer
  than 100 characters. (VRI)